--- a/wiki.html
+++ b/wiki.html
@@ -4,7 +4,7 @@
 	<title>Covid-19 Plateforme</title>
 	<link href="https://fonts.googleapis.com/css?family=Oswald:700&display=swap" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="styles/navbar-style.css">
-	<link rel="stylesheet" type="text/css" href="styles/index-style.css">
+	<link rel="stylesheet" type="text/css" href="styles/wiki-style.css">
 	<link rel="icon" type="image/png" href="images/favicon.png">
 </head>
 <body>
@@ -23,6 +23,35 @@
 		<div>
 			<a href="#" class="main-navbar__donate">Contribue Aux Dev <img class="main-navbar__donate--coin" src="images/coins1.png"></a>
 		</div>
+	</div>
+
+
+
+
+
+	<div class="main-container">
+		<div class="main-container__wikititle">
+				<svg style="width: 50px;" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 512">
+                    <path fill="white"
+                        d="M128 128a128 128 0 1 0 128 128 128 128 0 0 0-128-128zm64 144a5.33 5.33 0 0 1-5.33 5.33h-37.34v37.34A5.33 5.33 0 0 1 144 320h-32a5.33 5.33 0 0 1-5.33-5.33v-37.34H69.33A5.33 5.33 0 0 1 64 272v-32a5.33 5.33 0 0 1 5.33-5.33h37.34v-37.34A5.33 5.33 0 0 1 112 192h32a5.33 5.33 0 0 1 5.33 5.33v37.34h37.34A5.33 5.33 0 0 1 192 240zM64 480a32 32 0 0 0 32 32h64a32 32 0 0 0 32-32v-64H64zM192 32a32 32 0 0 0-32-32H96a32 32 0 0 0-32 32v64h128zm447.11 411.25L525.51 19.06C522.2 6.7 509.61-3.18 494.15 1L478.7 5.1q-9.27 2.49-16.06 14.24c-14 6.94-52.3 17.21-68 18.22q-11.76-6.8-21-4.3l-15.49 4.14c-2.42.65-4.2 2-6.15 3.08V32a32 32 0 0 0-32-32h-64a32 32 0 0 0-32 32v64h128l101.66 396.94C457 505.3 469.56 515.18 485 511l15.45-4.14q9.27-2.49 16.06-14.24c13.91-6.88 52.18-17.2 68-18.22q11.76 6.8 21 4.3l15.49-4.1c15.47-4.14 21.43-18.99 18.11-31.35zm-134.4-7.06L412.64 92.37l61.82-16.56 92.07 343.82zM224 128.81c38.62 29.24 64 75.12 64 127.19s-25.38 98-64 127.19v.81h128V128H224zM224 480a32 32 0 0 0 32 32h64a32 32 0 0 0 32-32v-64H224z" />
+                </svg>
+                <h1>Coronavirus 2019 Wiki</h1>
+                <p>Les sources de ces informations peuvent etre trouvez en bas de la page.</p>
+        </div>
+
+        <div class="main-container__whatsiscovid">
+        	<div class="main-container__whatsiscovid--title">
+        		<svg style="width: 25px; padding-bottom: 6px" aria-hidden="true" focusable="false"
+                            data-prefix="fas" data-icon="question-circle"
+                            class="svg-inline--fa fa-question-circle fa-w-16" role="img"
+                            xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+                            <path fill="currentColor"
+                                d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zM262.655 90c-54.497 0-89.255 22.957-116.549 63.758-3.536 5.286-2.353 12.415 2.715 16.258l34.699 26.31c5.205 3.947 12.621 3.008 16.665-2.122 17.864-22.658 30.113-35.797 57.303-35.797 20.429 0 45.698 13.148 45.698 32.958 0 14.976-12.363 22.667-32.534 33.976C247.128 238.528 216 254.941 216 296v4c0 6.627 5.373 12 12 12h56c6.627 0 12-5.373 12-12v-1.333c0-28.462 83.186-29.647 83.186-106.667 0-58.002-60.165-102-116.531-102zM256 338c-25.365 0-46 20.635-46 46 0 25.364 20.635 46 46 46s46-20.636 46-46c0-25.365-20.635-46-46-46z">
+               				</path>
+                </svg>
+            	<h2>What is the Coronavirus?</h2>
+            </div>
+        </div>
 	</div>
 
 
