--- a/wiki.html
+++ b/wiki.html
@@ -51,6 +51,15 @@
                 </svg>
             	<h2>What is the Coronavirus?</h2>
             </div>
+
+            <div class="main-container__whatsiscovid--list">
+            	<ol>
+            		<li class="main-container__whatsiscovid--list-item"></li>
+            		<li class="main-container__whatsiscovid--list-item"></li>
+            		<li class="main-container__whatsiscovid--list-item"></li>
+            		<li class="main-container__whatsiscovid--list-item"></li>
+            	</ol>
+            </div>
         </div>
 	</div>
 
