--- a/carte.html
+++ b/carte.html
@@ -12,10 +12,10 @@
 
 	<!-- NAVBAR -->
 	<div class="main-navbar">
-		<a href="index.html"><img class="main-navbar__logo" src="images/logo2.png"></a>
+		<a href="/"><img class="main-navbar__logo" src="images/logo2.png"></a>
 		<nav>
 			<ul class="main-navbar__list">
-				<li class="main-navbar__list--element"><a href="index.html">Donnees</a></li>
+				<li class="main-navbar__list--element"><a href="/">Donnees</a></li>
 				<li class="main-navbar__list--element"><a href="carte.html">Carte Mondiale</a></li>
 				<li class="main-navbar__list--element"><a href="wiki.html">Wiki</a></li>
 				<li class="main-navbar__list--element"><a href="propos.html">A Propos</a></li>
