--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 	<!-- NAVBAR -->
 	<div class="main-navbar">
-		<a href="index.html"><img class="main-navbar__logo" src="images/logo2.png"></a>
+		<a href="/"><img class="main-navbar__logo" src="images/logo2.png"></a>
 		<nav>
 			<ul class="main-navbar__list">
 				<li class="main-navbar__list--element"><a href="/">Donnees</a></li>
