added more information to the wiki

--- a/wiki.html
+++ b/wiki.html
@@ -56,9 +56,34 @@
             	<ol>
             		<li class="main-container__whatsiscovid--list-item">Covid19 est un virus (plus précisément, un coronavirus) identifié comme la cause d'une épidémie de maladie respiratoire détectée pour la première fois à Wuhan, en Chine.</li>
             		<li class="main-container__whatsiscovid--list-item">Au début, de nombreux patients de l'épidémie de Wuhan, en Chine, auraient eu un lien avec un grand marché de fruits de mer et d'animaux, suggérant une propagation de l'animal à la personne.</li>
-            		<li class="main-container__whatsiscovid--list-item"></li>
-            		<li class="main-container__whatsiscovid--list-item"></li>
+            		<li class="main-container__whatsiscovid--list-item">Cependant, un nombre croissant de patients n'auraient pas été exposés aux marchés aux animaux, ce qui indique une propagation de personne à personne.</li>
+            		<li class="main-container__whatsiscovid--list-item">Le nom coronavirus est dérivé du latin corona, qui signifie «couronne» ou «halo», qui fait référence à l'aspect caractéristique qui rappelle une couronne.</li>
             	</ol>
+            </div>
+
+            <div class="main-container__whatsiscovid--appearance">
+            	<h2>À quoi ressemble le coronavirus?</h2>
+            	<p>Ces images sont colorisées et issues de microscropes électroniques</p>
+            	<img src="images/covid1.png">
+            	<img src="images/covid2.png">
+            </div>
+
+            <div class="main-container__whatsiscovid--question">
+            	<div class="main-container__whatsiscovid--question-1">
+            		<h2>comment pouvez-vous être infecté?</h2>
+            		<div class="main-container__whatsiscovid--list">
+		            	<ol>
+		            		<li class="main-container__whatsiscovid--list-item">La principale voie de transmission est les gouttelettes respiratoires et les contacts étroits.</li>
+		            		<li class="main-container__whatsiscovid--list-item">Lorsque vous éternuez ou toussez, vous envoyez des gouttelettes de liquide par le nez et la bouche.</li>
+		            		<li class="main-container__whatsiscovid--list-item">Cependant, un nombre croissant de patients n'auraient pas été exposés aux marchés aux animaux, ce qui indique une propagation de personne à personne.</li>
+		            		<li class="main-container__whatsiscovid--list-item">Ces gouttelettes peuvent être porteuses d'infections et lorsqu'elles pénètrent dans les yeux, le nez ou la bouche de quelqu'un d'autre, l'infection peut les rendre malades. C'est ainsi que la grippe et de nombreux virus se propagent.</li>
+		            		<li class="main-container__whatsiscovid--list-item">Le plus souvent, vous devez être proche de la personne (à moins de 2 mètres) pour qu'elle se propage de cette façon.</li>
+		            		<li class="main-container__whatsiscovid--list-item">Il existe la possibilité de transmission d'aérosols lorsqu'ils sont exposés à des aérosols à haute concentration pendant une longue période dans un environnement relativement fermé.</li>
+		            		<li class="main-container__whatsiscovid--list-item">L'OMS a déclaré que le risque de propagation d'une personne sans symptômes est "très faible" et que la transmission fécale est "faible".</li>
+		            	</ol>
+            		</div>
+            	</div>
+            	
             </div>
         </div>
 	</div>
