changed font size/style of lists & added padding on the main container

--- a/wiki.html
+++ b/wiki.html
@@ -79,9 +79,14 @@
 		            		<li class="main-container__whatsiscovid--list-item">Ces gouttelettes peuvent être porteuses d'infections et lorsqu'elles pénètrent dans les yeux, le nez ou la bouche de quelqu'un d'autre, l'infection peut les rendre malades. C'est ainsi que la grippe et de nombreux virus se propagent.</li>
 		            		<li class="main-container__whatsiscovid--list-item">Le plus souvent, vous devez être proche de la personne (à moins de 2 mètres) pour qu'elle se propage de cette façon.</li>
 		            		<li class="main-container__whatsiscovid--list-item">Il existe la possibilité de transmission d'aérosols lorsqu'ils sont exposés à des aérosols à haute concentration pendant une longue période dans un environnement relativement fermé.</li>
-		            		<li class="main-container__whatsiscovid--list-item">L'OMS a déclaré que le risque de propagation d'une personne sans symptômes est "très faible" et que la transmission fécale est "faible".</li>
+		            		<li class="main-container__whatsiscovid--list-item">L'OMS (Organization Mondiale de la Sante) a déclaré que le risque de propagation d'une personne sans symptômes est "très faible" et que la transmission fécale est "faible".</li>
 		            	</ol>
             		</div>
+            	</div>
+
+            	<div class="main-container__whatsiscovid--question-2">
+            		<h2>comment pouvez-vous être infecté?</h2>
+            		
             	</div>
             	
             </div>
