finished wiki page

--- a/wiki.html
+++ b/wiki.html
@@ -86,6 +86,69 @@
 
             	<div class="main-container__whatsiscovid--question-2">
             		<h2>comment pouvez-vous être infecté?</h2>
+
+            		<div class="main-container__whatsiscovid--question-2--tip">
+            			<div class="main-container__whatsiscovid--question-2--tip-1">
+            				<h3>Lavage Des Mains</h3>
+            				<div class="main-container__whatsiscovid--list">
+				            	<ol>
+				            		<li class="main-container__whatsiscovid--list-item">Un certain nombre de gouvernements déconseillent tout voyage non essentiel dans les pays et régions touchés par l'épidémie.</li>
+				            		<li class="main-container__whatsiscovid--list-item">Il existe des idées fausses circulant sur la façon de prévenir l'infection: se rincer le nez, se gargariser avec un bain de bouche et manger de l'ail ne sont pas efficaces.</li>
+				            		<li class="main-container__whatsiscovid--list-item">Le CDC recommande que les gens se lavent souvent les mains avec du savon et de l'eau pendant au moins 20 secondes, surtout après être allé aux toilettes ou lorsque les mains sont visiblement sales.</li>
+				            	</ol>
+				            </div>
+            			</div>
+            			<div class="main-container__whatsiscovid--question-2--tip-2">
+            				<h3>Hygiène respiratoire</h3>
+            				<div class="main-container__whatsiscovid--list">
+				            	<ol>
+				            		<li class="main-container__whatsiscovid--list-item">Un certain nombre de gouvernements déconseillent tout voyage non essentiel dans les pays et régions touchés par l'épidémie.</li>
+				            		<li class="main-container__whatsiscovid--list-item">Il existe des idées fausses circulant sur la façon de prévenir l'infection: se rincer le nez, se gargariser avec un bain de bouche et manger de l'ail ne sont pas efficaces.</li>
+				            		<li class="main-container__whatsiscovid--list-item">Le CDC recommande que les gens se lavent souvent les mains avec du savon et de l'eau pendant au moins 20 secondes, surtout après être allé aux toilettes ou lorsque les mains sont visiblement sales.</li>
+				            	</ol>
+				            </div>
+            			</div>
+
+            			<div class="main-container__whatsiscovid--question-2--tip-3">
+            				<h3>Comment savoir si je suis infecté?</h3>
+            				<p>Les signes d'infection courants comprennent les symptômes respiratoires, la fièvre, la toux, l'essoufflement et les difficultés respiratoires. Dans les cas plus graves, l'infection peut provoquer une pneumonie, un syndrome respiratoire aigu sévère, une insuffisance rénale et même la mort.</p>
+            				<ul>
+            					<li>fièvre: 87.9%</li>
+            					<li>toux sèche: 67.7%</li>
+            					<li>Fatigue: 38.1%</li>
+            					<li>production d'expectorations: 33.4%</li>
+            					<li>difficulté à respirer: 18.6%</li>
+            					<li>douleur musculaire/articulaire: 14.8%</li>
+            					<li>gorge irritée: 13.9%</li>
+            					<li>mal de crâne: 13.6%</li>
+            					<li>frissons: 11.4%</li>
+            					<li>nausées ou vomissements: 5.0%</li>
+            				</ul>
+            			</div>
+
+
+
+            			<div class="main-container__whatsiscovid--question-2--tip-4">
+            				<h3>Ok je pense que je suis infecté, maintenant quoi?</h3>
+            				<div class="main-container__whatsiscovid--list">
+				            	<ol>
+				            		<li class="main-container__whatsiscovid--list-item">Un certain nombre de gouvernements déconseillent tout voyage non essentiel dans les pays et régions touchés par l'épidémie.</li>
+				            		<li class="main-container__whatsiscovid--list-item">Il existe des idées fausses circulant sur la façon de prévenir l'infection: se rincer le nez, se gargariser avec un bain de bouche et manger de l'ail ne sont pas efficaces.</li>
+				            		<li class="main-container__whatsiscovid--list-item">Le CDC recommande que les gens se lavent souvent les mains avec du savon et de l'eau pendant au moins 20 secondes, surtout après être allé aux toilettes ou lorsque les mains sont visiblement sales.</li>
+				            	</ol>
+				            </div>
+            			</div>
+            			<div class="main-container__whatsiscovid--question-2--tip-5">
+            				<h3>Existe-t-il un vaccin ou un remède?</h3>
+            				<div class="main-container__whatsiscovid--list">
+				            	<ol>
+				            		<li class="main-container__whatsiscovid--list-item">Aucun vaccin n'est actuellement disponible.</li>
+				            		<li class="main-container__whatsiscovid--list-item">Plusieurs organisations à travers le monde tentent de développer des vaccins, en utilisant plusieurs méthodes différentes.</li>
+				            		<li class="main-container__whatsiscovid--list-item">Plusieurs composés, qui avaient été précédemment approuvés pour le traitement d'autres maladies virales, tels que le favipiravir, la ribavirine, le remdesivir et le galidesivir, sont à l'étude contre le coronavirus.</li>
+				            	</ol>
+				            </div>
+            			</div>
+            		</div>
             		
             	</div>
             	
