--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<link rel="stylesheet" type="text/css" href="styles/navbar-style.css">
 	<link rel="stylesheet" type="text/css" href="styles/index-style.css">
 	<link rel="icon" type="image/png" href="images/favicon.png">
-	<meta property="image" content="images/covid1.png">
+	<meta property="ig:image" content="images/covid1.png">
 </head>
 <body>
 
