--- a/propos.html
+++ b/propos.html
@@ -4,7 +4,7 @@
 	<title>Covid-19 Plateforme</title>
 	<link href="https://fonts.googleapis.com/css?family=Oswald:700&display=swap" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="styles/navbar-style.css">
-	<link rel="stylesheet" type="text/css" href="styles/index-style.css">
+	<link rel="stylesheet" type="text/css" href="styles/propos-style.css">
 	<link rel="icon" type="image/png" href="images/favicon.png">
 </head>
 <body>
@@ -22,6 +22,21 @@
 		</nav>
 		<div>
 			<a href="#" class="main-navbar__donate">Contribue Aux Dev <img class="main-navbar__donate--coin" src="images/coins1.png"></a>
+		</div>
+	</div>
+
+
+
+	<div class="main-container">
+		<div class="main-container__propos">
+				<svg style="width: 35px; padding-bottom: 10px;" aria-hidden="true" focusable="false" data-prefix="fas"
+                    data-icon="id-card" class="svg-inline--fa fa-id-card fa-w-18" role="img"
+                    xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512">
+                    <path fill="currentColor"
+                        d="M528 32H48C21.5 32 0 53.5 0 80v16h576V80c0-26.5-21.5-48-48-48zM0 432c0 26.5 21.5 48 48 48h480c26.5 0 48-21.5 48-48V128H0v304zm352-232c0-4.4 3.6-8 8-8h144c4.4 0 8 3.6 8 8v16c0 4.4-3.6 8-8 8H360c-4.4 0-8-3.6-8-8v-16zm0 64c0-4.4 3.6-8 8-8h144c4.4 0 8 3.6 8 8v16c0 4.4-3.6 8-8 8H360c-4.4 0-8-3.6-8-8v-16zm0 64c0-4.4 3.6-8 8-8h144c4.4 0 8 3.6 8 8v16c0 4.4-3.6 8-8 8H360c-4.4 0-8-3.6-8-8v-16zM176 192c35.3 0 64 28.7 64 64s-28.7 64-64 64-64-28.7-64-64 28.7-64 64-64zM67.1 396.2C75.5 370.5 99.6 352 128 352h8.2c12.3 5.1 25.7 8 39.8 8s27.6-2.9 39.8-8h8.2c28.4 0 52.5 18.5 60.9 44.2 3.2 9.9-5.2 19.8-15.6 19.8H82.7c-10.4 0-18.8-10-15.6-19.8z">
+                    </path>
+                </svg>
+                <h1>A Propos</h1>
 		</div>
 	</div>
 
