--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 			</ul>
 		</nav>
 		<div>
-			<a href="#" class="main-navbar__donate">Contribue Aux Dev <img class="main-navbar__donate--coin" src="images/coins1.png"></a>
+			<a href="https://ko-fi.com/adilsadout" target="_blank" class="main-navbar__donate">Contribue Aux Dev <img class="main-navbar__donate--coin" src="images/coins1.png"></a>
 		</div>
 	</div>
 
