changed the title to fit the pages

--- a/carte.html
+++ b/carte.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	
-	<title>Covid-19 Plateforme</title>
+	<title>Covid-19: Carte Du Monde</title>
 	<link href="https://fonts.googleapis.com/css?family=Oswald:700&display=swap" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="styles/navbar-style.css">
 	<link rel="stylesheet" type="text/css" href="styles/carte-style.css">
