--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Covid-19 Plateforme</title>
+	<title>Covid-19: Plateforme Algerie</title>
 	<link href="https://fonts.googleapis.com/css?family=Oswald:700&display=swap" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="styles/navbar-style.css">
 	<link rel="stylesheet" type="text/css" href="styles/index-style.css">
