made website navbar responsive

--- a/carte.html
+++ b/carte.html
@@ -7,6 +7,7 @@
 	<link rel="stylesheet" type="text/css" href="styles/navbar-style.css">
 	<link rel="stylesheet" type="text/css" href="styles/carte-style.css">
 	<link rel="icon" type="image/png" href="images/favicon.png">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
 
@@ -24,6 +25,26 @@
 		<div>
 			<a href="https://ko-fi.com/adilsadout" target="_blank" class="main-navbar__donate">Contribue Aux Dev <img class="main-navbar__donate--coin" src="images/coins1.png"></a>
 		</div>
+		<button id="sandwish-button" class="sandwish">
+			<div>
+				<div class="sandwish-line"></div>
+				<div class="sandwish-line"></div>
+				<div class="sandwish-line"></div>
+			</div>
+		</button>
+	</div>
+
+	<div class="mobile-navbar">
+		<div class="mobile-navbar__list">
+			<ul>
+				<li><a href="/">Donnees</a></li>
+				<li><a href="carte.html">Carte Mondiale</a></li>
+				<li><a href="wiki.html">Wiki</a></li>
+				<li><a href="propos.html">A Propos</a></li>
+				<li id="mobile-navbar__donate"><a href="https://ko-fi.com/adilsadout" target="_blank">Contribue Aux Dev <img class="main-navbar__donate--coin" src="images/coins1.png"></a></li>
+			</ul>
+		</div>
+		
 	</div>
 
 
