--- a/propos.html
+++ b/propos.html
@@ -6,6 +6,7 @@
 	<link rel="stylesheet" type="text/css" href="styles/navbar-style.css">
 	<link rel="stylesheet" type="text/css" href="styles/propos-style.css">
 	<link rel="icon" type="image/png" href="images/favicon.png">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
 
@@ -23,6 +24,26 @@
 		<div>
 			<a href="https://ko-fi.com/adilsadout" target="_blank" class="main-navbar__donate">Contribue Aux Dev <img class="main-navbar__donate--coin" src="images/coins1.png"></a>
 		</div>
+		<button id="sandwish-button" class="sandwish">
+			<div>
+				<div class="sandwish-line"></div>
+				<div class="sandwish-line"></div>
+				<div class="sandwish-line"></div>
+			</div>
+		</button>
+	</div>
+
+	<div class="mobile-navbar">
+		<div class="mobile-navbar__list">
+			<ul>
+				<li><a href="/">Donnees</a></li>
+				<li><a href="carte.html">Carte Mondiale</a></li>
+				<li><a href="wiki.html">Wiki</a></li>
+				<li><a href="propos.html">A Propos</a></li>
+				<li id="mobile-navbar__donate"><a href="https://ko-fi.com/adilsadout" target="_blank">Contribue Aux Dev <img class="main-navbar__donate--coin" src="images/coins1.png"></a></li>
+			</ul>
+		</div>
+		
 	</div>
 
 
@@ -53,7 +74,7 @@
 			<ol>
 				<li>Ce site a ete cree par <bold>Adil Sadout.</bold> Etudiant en informatique a l'université de Khemis Miliana.</li>
 				<li>Vous pouvez me contacter a: adilsadout@hotmail.com</li>
-				<li>Mon Linkedin: <a href="https://www.linkedin.com/in/adil-sadout/">ICI</a></li>
+				<li>Mon Linkedin: <a href="https://www.linkedin.com/in/adil-sadout/" target="_blank">ICI</a></li>
 			</ol>
 		</div>
 	</div>
