made carte mondiale more responsive

--- a/carte.html
+++ b/carte.html
@@ -53,14 +53,14 @@
 		<div class="map-info">
 			<h2>Cle De La Carte</h2>
 			<ul>
-				<li><span style="color:black; font-size:1.5rem;">Noir:</span> Villes avec 1 000 cas ou plus</li>
-				<li><span style="color:purple; font-size:1.5rem;">Violet:</span> Villes avec 100 cas ou plus.</li>
-				<li><span style="color:red; font-size:1.5rem;">Rouge:</span> Villes avec 20 cas ou plus.</li>
-				<li><span style="color:orange; font-size:1.5rem;">Orange:</span> Villes avec moins de 20 cas</li>
-				<li><span style="color:lightblue; font-size:1.5rem;">Forme Diamant:</span> Villes avec décès</li>
+				<li><span class="map-info--titlename map-info--titlename1">Noir:</span> Villes avec 1 000 cas ou plus</li>
+				<li><span class="map-info--titlename map-info--titlename2">Violet:</span> Villes avec 100 cas ou plus.</li>
+				<li><span class="map-info--titlename map-info--titlename3">Rouge:</span> Villes avec 20 cas ou plus.</li>
+				<li><span class="map-info--titlename map-info--titlename4">Orange:</span> Villes avec moins de 20 cas</li>
+				<li><span class="map-info--titlename map-info--titlename5">Forme Diamant:</span> Villes avec décès</li>
 			</ul>
 		</div>
-		<iframe src="https://www.google.com/maps/d/embed?mid=1a04iBi41DznkMaQRnICO40ktROfnMfMx" width="90%" height="700px"></iframe>
+		<iframe src="https://www.google.com/maps/d/embed?mid=1a04iBi41DznkMaQRnICO40ktROfnMfMx" width="90%" height="550px"></iframe>
 		<p>Remarque: en raison du nombre élevé de nouveaux cas, plusieurs jours peuvent s'écouler avant que de nouveaux emplacements n'apparaissent sur la carte.</p>
 	</div>
 
