--- a/wiki.html
+++ b/wiki.html
@@ -16,9 +16,9 @@
 		<nav>
 			<ul class="main-navbar__list">
 				<li class="main-navbar__list--element"><a href="/">Donnees</a></li>
-				<li class="main-navbar__list--element"><a href="carte.html">Carte Mondiale</a></li>
-				<li class="main-navbar__list--element"><a href="wiki.html">Wiki</a></li>
-				<li class="main-navbar__list--element"><a href="propos.html">A Propos</a></li>
+                <li class="main-navbar__list--element"><a href="carte">Carte Mondiale</a></li>
+                <li class="main-navbar__list--element"><a href="wiki">Wiki</a></li>
+                <li class="main-navbar__list--element"><a href="propos">A Propos</a></li>
 			</ul>
 		</nav>
 		<div>
