--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<link rel="icon" type="image/png" href="images/favicon.png">
 	<meta property="ig:image" content="images/logo.png">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta http-equiv="refresh" content="60">
 </head>
 <body>
 
