--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 	</section>
 
 
-<!--	<section class="main-container">
+	<section class="main-container">
 		<div class="main-container__stats">
 				<div class="main-container__stats--intro">
 					<h2>Statistique Par Wilaya</h2>
@@ -121,7 +121,7 @@
 				</div>
 				<div class="main-container__stats-wilaya">
 					<div class="main-container__stats-wilaya-filter">
-						<label>Chercher votre wilaya</label><input>
+						<label>Chercher votre wilaya</label><input><button>Ok</button>
 					</div>
 					<table class="main-container__stats-wilaya__table">
 						<tr class="main-container__stats-wilaya__table-row">
@@ -133,13 +133,7 @@
 							</th>
 							<th class="wilaya__header--element wilaya__table-element">
 								Active
-							</th>
-							<th class="wilaya__header--element wilaya__table-element">
-								Hommes
-							</th>
-							<th class="wilaya__header--element wilaya__table-element">
-								Femmes
-							</th>
+							</th>							
 							<th class="wilaya__header--element wilaya__table-element">
 								Hospitalisé
 							</th>
@@ -149,24 +143,29 @@
 							<th class="wilaya__header--element wilaya__table-element">
 								Guéri
 							</th>
-							
+							<th class="wilaya__header--element wilaya__table-element">
+								Hommes
+							</th>
+							<th class="wilaya__header--element wilaya__table-element">
+								Femmes
+							</th>
 						</tr>
-						<tr>
-							<td class="wilaya__table-element td-element wilaya-name">ngr</td>
-							<td class="wilaya__table-element td-element confirmed-case">ngr</td>
-							<td class="wilaya__table-element td-element active-case">ngr</td>
-							<td class="wilaya__table-element td-element male-case">ngr</td>
-							<td class="wilaya__table-element td-element female-case">ngr</td>
-							<td class="wilaya__table-element td-element hospital-case">ngr</td>
-							<td class="wilaya__table-element td-element death-case">ngr</td>
-							<td class="wilaya__table-element td-element recovered-case">ngr</td>
-							
+<!--					<tr>
+							<td class="wilaya__table-element td-element fr-case">test</td>
+							<td class="wilaya__table-element td-element confirmed-case">test</td>
+							<td class="wilaya__table-element td-element active-case">test</td>
+							<td class="wilaya__table-element td-element males-case">test</td>
+							<td class="wilaya__table-element td-element females-case">test</td>
+							<td class="wilaya__table-element td-element hospital-case">test</td>
+							<td class="wilaya__table-element td-element deaths-case">test</td>
+							<td class="wilaya__table-element td-element recovers-case">test</td>
+-->								
 						</tr>
 					</table>
 				</div>
 		</div>
 	</section>
--->
+
 </body>
 
 
