finished the data on the table for algeria wilayas (coronavirus api)

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 	</section>
 
 
-	<section class="main-container">
+	<section class="main-container table">
 		<div class="main-container__stats">
 				<div class="main-container__stats--intro">
 					<h2>Statistique Par Wilaya</h2>
