removed button of the chercher votre wilaya

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 				</div>
 				<div class="main-container__stats-wilaya">
 					<div class="main-container__stats-wilaya-filter">
-						<label>Chercher votre wilaya</label><input><button>Ok</button>
+						<label>Chercher votre wilaya</label><input>
 					</div>
 					<table class="main-container__stats-wilaya__table">
 						<tr class="main-container__stats-wilaya__table-row">
