made filter input functional

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 				</div>
 				<div class="main-container__stats-wilaya">
 					<div class="main-container__stats-wilaya-filter">
-						<label>Chercher votre wilaya</label><input>
+						<label>Chercher votre wilaya</label><input id="filter">
 					</div>
 					<table class="main-container__stats-wilaya__table">
 						<tr class="main-container__stats-wilaya__table-row">
@@ -150,7 +150,7 @@
 								Femmes
 							</th>
 						</tr>
-<!--					<tr>
+<!--					<tr class="wilaya__table--row">
 							<td class="wilaya__table-element td-element fr-case">test</td>
 							<td class="wilaya__table-element td-element confirmed-case">test</td>
 							<td class="wilaya__table-element td-element active-case">test</td>
