changed some grammar error list header

--- a/index.html
+++ b/index.html
@@ -129,10 +129,10 @@
 								Wilaya
 							</th>
 							<th class="wilaya__header--element wilaya__table-element">
-								Confirme
+								Confirmée
 							</th>
 							<th class="wilaya__header--element wilaya__table-element">
-								Active
+								Actif
 							</th>							
 							<th class="wilaya__header--element wilaya__table-element">
 								Hospitalisé
