testing image showing when sharing the site

--- a/index.html
+++ b/index.html
@@ -6,9 +6,14 @@
 	<link rel="stylesheet" type="text/css" href="styles/navbar-style.css">
 	<link rel="stylesheet" type="text/css" href="styles/index-style.css">
 	<link rel="icon" type="image/png" href="images/favicon.png">
-	<meta property="ig:image" content="images/logo.png">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="refresh" content="600">
+
+	<meta property="og:url"           content="https://www.covid2019.cf" />
+  	<meta property="og:type"          content="website" />
+ 	<meta property="og:title"         content="Covid2019.cf" />
+  	<meta property="og:description"   content="Voir les dernier Statistique du coronavirus en algerie" />
+  	<meta property="og:image"         content="images/searchwilaya.png" />
 </head>
 <body>
 
