added xmlns tag on html page

--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html xmlns="http://www.w3.org/1999/xhtml"
+xmlns:fb="http://ogp.me/ns/fb#">
 <head>
 	<title>Covid-19 Plateforme Algerie</title>
+	
 	<link href="https://fonts.googleapis.com/css?family=Oswald:700&display=swap" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="styles/navbar-style.css">
 	<link rel="stylesheet" type="text/css" href="styles/index-style.css">
