trying to add an img to show when website get shared in fb

--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml"
-xmlns:fb="http://ogp.me/ns/fb#">
+<html>
 <head>
 	<title>Covid-19 Plateforme Algerie</title>
 	
@@ -11,11 +10,14 @@ xmlns:fb="http://ogp.me/ns/fb#">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="refresh" content="600">
 
-	<meta property="og:url"           content="https://www.covid2019.cf" />
-  	<meta property="og:type"          content="website" />
- 	<meta property="og:title"         content="Covid2019.cf" />
-  	<meta property="og:description"   content="Voir les dernier Statistique du coronavirus en algerie" />
-  	<meta property="og:image"         content="images/searchwilaya.png" />
+	<meta property="og:image" content="images/searchwilaya.png">
+    <meta property="og:image:type" content="images/png">
+    <meta property="og:image:width" content="400">
+    <meta property="og:image:height" content="145">
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://covid2019.cf/"/>
+    <meta property="og:title" content="Covid-19 Dz" />
+    <meta property="og:description" content="Derniere Donnees Sur Le Coronavirus En Algerie" />
 </head>
 <body>
 
