--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="refresh" content="600">
 
-	<meta property="og:image" content="images/searchwilaya.png">
+	<meta property="og:image" content="https://covid2019.cf/images/searchwilaya.png">
     <meta property="og:image:type" content="images/png">
     <meta property="og:image:width" content="400">
     <meta property="og:image:height" content="145">
-    <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://covid2019.cf/"/>
-    <meta property="og:title" content="Covid-19 Dz" />
-    <meta property="og:description" content="Derniere Donnees Sur Le Coronavirus En Algerie" />
+    <meta property="og:type" content="website" >
+    <meta property="og:url" content="https://covid2019.cf/">
+    <meta property="og:title" content="Covid-19 Dz" >
+    <meta property="og:description" content="Derniere Donnees Sur Le Coronavirus En Algerie">
 </head>
 <body>
 
