--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="refresh" content="600">
 
-	<meta property="og:image" content="https://covid2019.cf/images/searchwilaya.png">
+	
+	<meta property="og:image:url" content="https://covid2019.cf/images/searchwilaya.png">
     <meta property="og:image:type" content="images/png">
     <meta property="og:image:width" content="560">
     <meta property="og:image:height" content="250">
