--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<meta http-equiv="refresh" content="600">
 
 	
-	<meta property="og:image:url" content="images/searchwilaya.png">
+	<meta property="og:image" content="images/searchwilaya.png">
     <meta property="og:image:type" content="images/png">
     <meta property="og:image:width" content="560">
     <meta property="og:image:height" content="250">
