hospitalised has been removed from the api, so i removed it from the table

--- a/index.html
+++ b/index.html
@@ -143,9 +143,9 @@
 							<th class="wilaya__header--element wilaya__table-element">
 								Actif
 							</th>							
-							<th class="wilaya__header--element wilaya__table-element">
+							<!--<th class="wilaya__header--element wilaya__table-element">
 								Hospitalisé
-							</th>
+							</th>-->
 							<th class="wilaya__header--element wilaya__table-element">
 								Mort
 							</th>
