--- a/index.html
+++ b/index.html
@@ -9,15 +9,23 @@
 	<link rel="icon" type="image/png" href="images/favicon.png">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="refresh" content="600">
-
+<!--
+	<meta property="og:url" content="https://covid2019.cf/">
+	<meta property="og:title" content="Covid-19 Dz">
+	<meta property="og:description" content="Derniere Donnees Sur Le Coronavirus En Algerie">
 	<meta property="og:image:url" content="https://covid2019.cf/images/searchwilaya.png">
     <meta property="og:image:type" content="images/png">
     <meta property="og:image:width" content="500">
     <meta property="og:image:height" content="250">
     <meta property="og:type" content="website" >
-    <meta property="og:url" content="https://covid2019.cf/">
-    <meta property="og:title" content="Covid-19 Dz" >
-    <meta property="og:description" content="Derniere Donnees Sur Le Coronavirus En Algerie">
+-->
+	<meta property="og:url"                content="https://covid2019.cf/"/>
+	<meta property="og:type"               content="website" />
+	<meta property="og:title"              content="Plateforme Covid19 En Algerie" />
+	<meta property="og:description"        content="Les dernier donnees et statistique du covid19 en algerie"/>
+	<meta property="og:image"              content="http://static01.nyt.com/images/2015/02/19/arts/international/19iht-btnumbers19A/19iht-btnumbers19A-facebookJumbo-v2.jpg" />
+    
+    
 </head>
 <body>
 
@@ -69,6 +77,12 @@
 		<p>Données Prises Le:</p>
 		<p id="number0"></p>
 	</div>
+
+	<!--FaceBook Share Button-->
+	<div id="fb-root"></div>
+<script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v6.0"></script>
+	
+<div class="fb-share-button" data-href="https://covid2019.cf/" data-layout="button" data-size="large"><a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fcovid2019.cf%2F&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore">Share</a></div>
 
 
 	<!--sidebar stats-->
