still testing with share fb button

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	<meta property="og:title"              content="Plateforme Covid19 En Algerie" />
 	<meta property="og:type"               content="website" />
 	<meta property="og:description"        content="Les dernier donnees et statistique du covid19 en algerie"/>
-	<meta property="og:image"              content="https://covid2019.cf/images/searchwilaya.png" />
+	<meta property="og:image"              content="images/searchwilaya.png" />
     
     
 </head>
