--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 	</section>
 
 
-	<section class="main-container table">
+	<!--<section class="main-container table">
 		<div class="main-container__stats">
 				<div class="main-container__stats--intro">
 					<h2>Statistique Par Wilaya</h2>
@@ -185,7 +185,7 @@
 					</table>
 				</div>
 		</div>
-	</section>
+	</section>-->
 
 </body>
 
